# typox

./: .gitignore  .typst-package-lint.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-wasm.sh  demo-wasm.typ  demo.typ  demo_queries.sparql  example.typ  setup_demo.sh
plugin/: 202509_WASM_STATUS.md  Cargo.toml  README.md
plugin/.cargo/: config.toml
plugin/src/: lib.rs
samples/: datatypes.ttl  locations.ttl  people.ttl  products.ttl  publications.ttl
scripts/: lint-package.sh  prepare-typst-package.sh  submit-package.sh  test-package.sh
specs/: package-quality-tooling.md  sparql_query_namespace_fix.md  typox-wasm-plugin-specification.md  typst-package-publishing-guide.md
src/: main.rs
tests/package/: tytanic.toml
typst-package/: README.md  lib.typ  typox.wasm  typst.toml
