# Copyright (c) 2024 Typox Project Contributors
# Licensed under the MIT License - see LICENSE file for details

[package]
name = "typox"
version = "0.1.0"
edition = "2021"
description = "Typst package for querying RDF data from Oxigraph stores"
authors = ["Typox Project Contributors"]
license = "MIT"

[dependencies]
oxigraph = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0"
url = "2.0"
glob = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
